--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,8 @@
 <body>
 Hello
 <a href="/hello">hello</a>
+<a href="/login">
+    <img src="//mud-kage.kakao.com/14/dn/btqbjxsO6vP/KPiGpdnsubSq3a0PHEGUK1/o.jpg" width="300"/>
+</a>
 </body>
 </html>
